# archi-type-prediction

./: .gitignore  archi_run_config.py  architype.ipynb  ontouml_run_config.py  run_configs.py
architype/: Makefile  README.md  pyproject.toml  requirements.txt
architype/__MACOSX/data/raw/eamodelset/processed-models/: ._id-c495f4d2-49b4-429c-a8d6-2b111d156b06
architype/architype/: __init__.py
architype/architype/cleanse/: __init__.py  dedup.py  filters.py
architype/architype/dataset/: __init__.py  build.py  metadata.py
architype/architype/eval/: __init__.py  metrics.py  report.py  stats.py
architype/architype/extract/: __init__.py  edge_text.py  node_text.py  special_tokens.py  tokenization.py
architype/architype/langgraph/: __init__.py  archimate.py  base.py  ontouml.py
architype/architype/llm/: base.py
architype/architype/llm/prompts/: base.py  cleansing.py  llm_text_classification.py
architype/architype/models/: __init__.py  base.py
architype/architype/models/api/: classifier.py  run_claude.py  run_gpt.py
architype/architype/models/bert/: data.py  model.py  trainer.py
architype/architype/models/unsloth/: model.py  prompts.py
architype/architype/models/unsloth/prompts/: system.txt  template_few.txt  template_thinking.txt  template_zero.txt
architype/architype/utils/: __init__.py  config.py  file.py  io.py  logging.py  seed.py
architype/configs/: api_llms.yaml  config.py  data.yaml  eval.yaml  extract.yaml  train_bert.yaml  train_unsloth.yaml
architype/data/raw/eamodelset/: dataset.json  en-metadata.csv
architype/docker/: Dockerfile
(+1141 files in other folders)
