[tool.poetry]
name = "architype"
version = "0.1.0"
description = "Archi-Type Prediction toolkit (structure under construction)."
authors = ["TODO <todo@example.com>"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

